--- a/Car_Price/preprocessing.ipynb
+++ b/Car_Price/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "max    288.000000  6600.000000   49.000000   54.000000  45400.000000  "
       ]
      },
-     "execution_count": 181,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "0"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,16 +431,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x24895ec6408>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2401df35a48>"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -463,16 +463,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x24895a1cec8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2401dec2c48>"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
        "stroke           -0.689705"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,16 +602,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x24889905208>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2401e7c2608>"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "Name: price, dtype: float64"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
        "price              -0.811842  1.000000  "
       ]
      },
-     "execution_count": 194,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1272,7 @@
        "wheelbase   0.602960"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,52 +1293,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000002489307C408>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024892EA2E88>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024892EB1F08>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024892FD0648>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024892FCA348>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024892F9FD08>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x0000024892F57E88>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024895CDB088>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024895CDFB88>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024895D1A948>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024895D80F08>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024895DB7F88>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x0000024895DF4088>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024895E2C1C8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024895E652C8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002489621E3C8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024896255488>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002489628E588>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x00000248962CCE88>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000248962FF7C8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000248963378C8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002489636F988>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000248963A7AC8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000248963E1BC8>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002489641BCC8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024896452E08>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002489648CF08>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024897492F88>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000248974D0108>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024897509248>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x0000024897542348>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002489757B448>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000248975B2508>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000248975EC608>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000024897625708>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002489765E848>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000002401E868388>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401E831A48>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401E8F8AC8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401E931608>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401E96B708>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401E9A5788>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002401E9DB8C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EA149C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EA1F8C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EA57A88>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EABDC88>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EAF5D88>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002401EB2EE88>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EB66F88>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EBA40C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EBDD188>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EC162C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EC4C3C8>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002401EC884C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401ECC1608>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401ECF9708>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401ED30788>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401ED678C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EDA09C8>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002401EDD8AC8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EE12C08>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EE49C88>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EE81D88>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EEBBEC8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EEF4FC8>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002401EF32108>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EF6A1C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EFA42C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401EFDC3C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401F015508>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002401F04E608>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2117,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2128,8 +2128,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dummy encoding and post processing (concat)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2141,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2150,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2160,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2169,7 +2176,7 @@
        "(205, 54)"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
